<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_route"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:text="Start:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        android:id="@+id/Start" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_below="@+id/button_add"
        android:layout_alignParentStart="true"
        android:layout_height="410dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:id="@+id/linearLayout1">

            <TextView
                android:text="@string/stop1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:id="@+id/textView1"
                android:layout_weight="0.10"
                android:maxLines="1"/>

            <TextView
                android:text="@string/stop2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:id="@+id/textView2"

                android:layout_weight="0.1" />

            <TextView
                android:text="@string/stop3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:id="@+id/textView3"
                android:layout_weight="0.1" />

            <TextView
                android:text="@string/stop4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:id="@+id/textView4"
                android:layout_weight="0.1" />

            <TextView
                android:text="@string/stop5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:id="@+id/textView5"
                android:layout_weight="0.1" />

            <TextView
                android:text="@string/stop6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:id="@+id/textView6"
                android:layout_weight="0.1" />

            <TextView
                android:text="@string/stop7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:id="@+id/textView7"
                android:layout_weight="0.1" />

            <TextView
                android:text="@string/stop8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:id="@+id/textView8"
                android:layout_weight="0.1" />

            <TextView
                android:text="@string/stop9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:id="@+id/textView9"
                android:layout_weight="0.1" />

            <TextView
                android:text="@string/stop10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:id="@+id/textView10"
                android:layout_weight="0.1" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:id="@+id/LinearLayout2">

            <TextView
                android:text="Ziel Eingeben"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView20"
                android:layout_weight="0.1" />

            <TextView
                android:text="Ziel Eingeben"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView21"
                android:layout_weight="0.1" />

            <TextView
                android:text="Ziel Eingeben"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView22"
                android:layout_weight="0.1" />

            <TextView
                android:text="Ziel Eingeben"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView23"
                android:layout_weight="0.1" />

            <TextView
                android:text="Ziel Eingeben"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView24"
                android:layout_weight="0.1" />

            <TextView
                android:text="Ziel Eingeben"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView25"
                android:layout_weight="0.1" />

            <TextView
                android:text="Ziel Eingeben"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView26"
                android:layout_weight="0.1" />

            <TextView
                android:text="Ziel Eingeben"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView27"
                android:layout_weight="0.1" />

            <TextView
                android:text="Ziel Eingeben"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView28"
                android:layout_weight="0.1" />

            <TextView
                android:text="Ziel Eingeben"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView29"
                android:layout_weight="0.1" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/LinearLayout3"
            android:weightSum="1">

            <Button
                android:text="x"
                android:layout_width="match_parent"
                android:id="@+id/button1"
                android:layout_weight="0.1"
                android:layout_height="27dp"
                android:onClick="onClick"/>

            <Button
                android:text="x"
                android:layout_width="match_parent"
                android:id="@+id/button2"
                android:layout_weight="0.1"
                android:layout_height="27dp"
                android:onClick="onClick"/>

            <Button
                android:text="x"
                android:layout_width="match_parent"
                android:id="@+id/button3"
                android:layout_weight="0.1"
                android:layout_height="27dp"
                android:onClick="onClick"/>

            <Button
                android:text="x"
                android:layout_width="match_parent"
                android:id="@+id/button4"
                android:layout_weight="0.1"
                android:layout_height="27dp"
                android:onClick="onClick"/>

            <Button
                android:text="x"
                android:layout_width="match_parent"
                android:id="@+id/button5"
                android:layout_weight="0.1"
                android:layout_height="27dp"
                android:onClick="onClick"/>

            <Button
                android:text="x"
                android:layout_width="match_parent"
                android:id="@+id/button6"
                android:layout_weight="0.1"
                android:layout_height="27dp"
                android:onClick="onClick"/>

            <Button
                android:text="x"
                android:layout_width="match_parent"
                android:id="@+id/button7"
                android:layout_weight="0.1"
                android:layout_height="27dp"
                android:onClick="onClick"/>

            <Button
                android:text="x"
                android:layout_width="match_parent"
                android:id="@+id/button8"
                android:layout_weight="0.1"
                android:layout_height="27dp"
                android:onClick="onClick"/>

            <Button
                android:text="x"
                android:layout_width="match_parent"
                android:id="@+id/button9"
                android:layout_weight="0.1"
                android:layout_height="27dp"
                android:onClick="onClick"/>

            <Button
                android:text="x"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:id="@+id/button10"
                android:layout_weight="0.1"
                android:onClick="onClick"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/button_save"
        android:onClick="save"/>

    <Button
        android:text="+"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_add"
        style="@style/Widget.AppCompat.Button"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:onClick="add"/>

    <TextView
        android:text="Startort Eingeben"
        android:id="@+id/StartTextview"
        android:layout_height="40dp"
        android:textSize="19sp"
        android:layout_width="200dp"
        android:layout_alignBaseline="@+id/Start"
        android:layout_alignBottom="@+id/Start"
        android:layout_toEndOf="@+id/Start"
        android:layout_marginStart="16dp" />


</RelativeLayout>
